openshift/apps/store-front-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-front-service
  labels:
    app: store-front-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-front-service
  template:
    metadata:
      labels:
        app: store-front-service
    spec:
      containers:
      - name: store-front-service
        image: yehudalinker/store-front-service:v1
        ports:
        - containerPort: 8501
