openshift/apps/store-front-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-front-service
spec:
  selector:
    app: store-front-service
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
